# EzOrder_Backend

./: .env  .env.example  check_status.py  check_users.py  generate_documentation.py  main.py  project_documentation.md  pyproject.toml  test_connection.py  test_gemini.py  test_whatsapp.py
agents_folder/: prompts.py  registration_agent.py  restaurant_agent.py
api/: main.py
api/dependencies/: auth.py
api/routers/: auth.py  menu.py  order.py  webhooks.py
api/schemas/: auth.py  menu.py  order.py
api/services/: auth_service.py  menu_service.py  order_service.py
config/: auth.py  database.py  settings.py
handlers/: whatsapp_handler.py
models/: menu.py  order.py  user.py  webhook_notification.py
services/: conversation_service.py  free_speech_service.py  state_manager.py  webhook_notification_service.py  websocket_service.py  whatsapp_notification_service.py
tools/: menu_tools.py  order_tools.py  registration_tools.py
utils/: phone_utils.py
